--- a/.github/workflows/reset-azure-environment.yml
+++ b/.github/workflows/reset-azure-environment.yml
@@ -124,8 +124,8 @@ jobs:
           -SourceSlotName ${{ inputs.source-slot-name }} `
           -DestinationSlotName ${{ inputs.destination-slot-name }} `
           -ConnectionStringName ${{ inputs.storage-connection-string-name }} `
-          -ContainerBlackList ${{ inputs.container-exclude-list }} `
-          -ContainerWhiteList ${{ inputs.container-include-list }} `
+          -ContainerBlackList ${{ inputs.blob-container-exclude-list }} `
+          -ContainerWhiteList ${{ inputs.blob-container-include-list }} `
           -FolderBlackList ${{ inputs.folder-exclude-list }} `
           -FolderWhiteList ${{ inputs.folder-include-list }}
 
