--- a/.github/workflows/reset-azure-environment.yml
+++ b/.github/workflows/reset-azure-environment.yml
@@ -25,15 +25,15 @@ on:
         type: string
         default: Staging
         description: >
-          The slot name of the web app you want to reset. What you see at the top of the blade on the Azure
-          Portal, when you open the slot, before the app name in parenthesis.
+          The slot name of the web app you want to reset. What you see at the top of the blade on the Azure Portal,
+          when you open the slot, before the app name in parenthesis.
       source-slot-name:
         required: false
         type: string
         default: Production
         description: >
-          The slot name of the web app you want to reset the destination web app with. What you see at the
-          top of the blade on the Azure Portal, when you open the slot, before the app name in parenthesis.
+          The slot name of the web app you want to reset the destination web app with. What you see at the top of the
+          blade on the Azure Portal, when you open the slot, before the app name in parenthesis.
       resource-group-name:
         required: true
         type: string
@@ -56,8 +56,9 @@ on:
       storage-connection-string-name:
         required: true
         type: string
-        description: The name of the storage connection string. The Connection String Name property specifies the name
-          of the named connection string that the SQL Workflow Instance Store should use to connect to the persistence
+        description: >
+          The name of the storage connection string. The Connection String Name property specifies the name of the
+          named connection string that the SQL Workflow Instance Store should use to connect to the persistence
           database.
       service-objective-name:
         required: false
@@ -69,35 +70,35 @@ on:
         type: string
         default: "@()"
         description: >
-            PowerShell string array with the name of the excluded Blob Container(s), e.g.
-            "@(\"not-media\")" or "@(\"not-media\", \"bad-container\")". The parameter must be a PowerShell string
-            array. When valid values are provided for "blob-container-include-list", then "blob-container-exclude-list"
-            is not taken into consideration.
+          PowerShell string array with the name of the excluded Blob Container(s), e.g.
+          "@(\"not-media\")" or "@(\"not-media\", \"bad-container\")". The parameter must be a PowerShell string array.
+          When valid values are provided for "blob-container-include-list", then "blob-container-exclude-list" is not
+          taken into consideration.
       blob-container-include-list:
         required: false
         type: string
         default: "@(\"media\")"
         description: >
-            PowerShell string array with the name of the included Blob Container(s), e.g.
-            "@(\"media\")" or "@(\"media\", \"cool-container\")". The parameter must be a PowerShell string array. When
-            valid values are provided, it cancels out "blob-container-exclude-list".
+          PowerShell string array with the name of the included Blob Container(s), e.g.
+          "@(\"media\")" or "@(\"media\", \"cool-container\")". The parameter must be a PowerShell string array. When
+          valid values are provided, it cancels out "blob-container-exclude-list".
       folder-exclude-list:
         required: false
         type: string
         default: "@(\"RecipeJournal\", \"`$`$`$ORCHARD`$`$`$.`$`$`$\")"
         description: >
-            PowerShell string array with the name of the excluded folder(s), e.g.
-            "@(\"RecipeJournal\")" or "@(\"RecipeJournal\", \"BadFolder\")". The parameter must be a PowerShell string
-            array. When valid values are provided for "folder-include-list", then "folder-exclude-list"
-            is not taken into consideration.
+          PowerShell string array with the name of the excluded folder(s), e.g.
+          "@(\"RecipeJournal\")" or "@(\"RecipeJournal\", \"BadFolder\")". The parameter must be a PowerShell string
+          array. When valid values are provided for "folder-include-list", then "folder-exclude-list"
+          is not taken into consideration.
       folder-include-list:
         required: false
         type: string
         default: "@()"
         description: >
-            PowerShell string array with the name of the included folder(s), e.g.
-            "@(\"NotRecipeJournal\")" or "@(\"NotRecipeJournal\", \"CoolFolder\")". The parameter must be a PowerShell
-            string array. When valid values are provided, it cancels out "folder-exclude-list".
+          PowerShell string array with the name of the included folder(s), e.g.
+          "@(\"NotRecipeJournal\")" or "@(\"NotRecipeJournal\", \"CoolFolder\")". The parameter must be a PowerShell
+          string array. When valid values are provided, it cancels out "folder-exclude-list".
 
 jobs:
   reset-azure-environment:
