Try to quickfix problem

--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -11,13 +11,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
+    prefix-pr:
     - name: Prefix PR
       id: prefix
       uses: Lombiq/GitHub-Actions/.github/actions/prefix-pr@issue/OSOE-425
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  verify-pr:
+    needs: prefix-pr
+    runs-on: ubuntu-latest
     - name: Ensure Parent PR Exists
       uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@dev
       with:
