Revert "Try to quickfix problem"
This reverts commit 8bd021086eed8c8175c6d5f1c17302a9ef26f3c7.

--- a/.github/workflows/validate-submodule-pull-request.yml
+++ b/.github/workflows/validate-submodule-pull-request.yml
@@ -11,16 +11,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    prefix-pr:
+    steps:
     - name: Prefix PR
       id: prefix
       uses: Lombiq/GitHub-Actions/.github/actions/prefix-pr@issue/OSOE-425
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  verify-pr:
-    needs: prefix-pr
-    runs-on: ubuntu-latest
     - name: Ensure Parent PR Exists
       uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@dev
       with:
