Publishing test results in the step summary instead, to work around GHA bug

--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -75,11 +75,14 @@ runs:
         if-no-files-found: ignore
 
     - name: Test Report
-      # v8
-      uses: phoenix-actions/test-reporting@1e9b578818d03d6df50ce8e60d024a000bf3ab63
+      # Version from this PR: https://github.com/phoenix-actions/test-reporting/pull/21 for work around the test report
+      # showing up under different checks if the workflow runs multiple jobs in parallel. See
+      # https://github.com/Lombiq/GitHub-Actions/issues/73.
+      uses: phoenix-actions/test-reporting@f68b7c5fcffefd98dd230c686cca6c26683668c3
       if: (success() || failure()) && (github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false)
       with:
         name: Test Results (${{inputs.build-directory}}|${{ steps.setup.outputs.runner-suffix }}
         path: '${{inputs.build-directory}}/**/*.trx'
         reporter: dotnet-trx
         fail-on-error: 'false'
+        output-to: 'step-summary'
