--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -79,7 +79,7 @@ runs:
       # showing up under different checks if the workflow runs multiple jobs in parallel. See
       # https://github.com/Lombiq/GitHub-Actions/issues/73.
       uses: phoenix-actions/test-reporting@f68b7c5fcffefd98dd230c686cca6c26683668c3
-      if: (success() || failure()) && (github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false)
+      if: success() || failure()
       with:
         name: Test Results (${{inputs.build-directory}}|${{ steps.setup.outputs.runner-suffix }}
         path: '${{inputs.build-directory}}/**/*.trx'
