--- a/.github/actions/prefix-pr/action.yml
+++ b/.github/actions/prefix-pr/action.yml
@@ -8,4 +8,4 @@ runs:
   steps:
     - name: Prefix PR
       shell: pwsh
-      run: ${{ github.action_path }}/Prefix-PR ${{ github.GITHUB_REPOSITORY }} ${{ github.github_ref }} ${{ inputs.GITHUB_TOKEN }}
+      run: ${{ github.action_path }}/Prefix-PR ${{ github.GITHUB_REPOSITORY }} ${{ github.GITHUB_REF }} ${{ inputs.GITHUB_TOKEN }}
