--- a/.github/actions/prefix-pr/action.yml
+++ b/.github/actions/prefix-pr/action.yml
@@ -8,4 +8,14 @@ runs:
   steps:
     - name: Prefix PR
       shell: pwsh
-      run: ${{ github.action_path }}/Prefix-PR ${{ github.GITHUB_REPOSITORY }} ${{ github.GITHUB_REF }} ${{ inputs.GITHUB_TOKEN }}
+      run: |
+        Write-Host $Env:GITHUB_REF
+        echo $Env:GITHUB_REF
+        
+        
+        
+        
+        
+        
+        
+# ${{ github.action_path }}/Prefix-PR ${{ github.GITHUB_REPOSITORY }} $Env:GITHUB_REF ${{ inputs.GITHUB_TOKEN }}
