--- a/.github/actions/prefix-pr/action.yml
+++ b/.github/actions/prefix-pr/action.yml
@@ -12,7 +12,7 @@ runs:
         echo "1"
         $Env:GITHUB_REF
         echo "2"
-        $GITHUB_REF
+        $Env:GITHUB_REPOSITORY
         
         
         
