--- a/.github/actions/prefix-pr/action.yml
+++ b/.github/actions/prefix-pr/action.yml
@@ -8,4 +8,4 @@ runs:
   steps:
     - name: Prefix PR
       shell: pwsh
-      run: ${{ github.action_path }}/Prefix-PR $Env:GITHUB_REPOSITORY $Env:GITHUB_REF $Env:GITHUB_ACTION_REF ${{ inputs.GITHUB_TOKEN }}
+      run: ${{ github.action_path }}/Prefix-PR $Env:GITHUB_REPOSITORY $Env:GITHUB_REF $Env:GITHUB_REF_NAME ${{ inputs.GITHUB_TOKEN }}
