--- a/.github/actions/verify-submodule-pull-request/action.yml
+++ b/.github/actions/verify-submodule-pull-request/action.yml
@@ -28,14 +28,14 @@ runs:
 
     # We are using env for the title input in these steps because it realistically could contain quotes, apostrophes or
     # even both. This way those don't need to be escaped.
-    - name: Ensure Current PR Title Includes Issue Code
-      shell: pwsh
-      env:
-        PR_TITLE: ${{ inputs.title }}
-      run: Check-Current $Env:PR_TITLE
+    # - name: Ensure Current PR Title Includes Issue Code
+    #   shell: pwsh
+    #   env:
+    #     PR_TITLE: ${{ inputs.title }}
+    #   run: Check-Current $Env:PR_TITLE
 
     - name: Ensure Parent Repository Contains Matching PR
       shell: pwsh
       env:
         PR_TITLE: ${{ inputs.title }}
-      run: Check-Parent '${{ inputs.repository }}' $Env:PR_TITLE
+      run: Check-Parent '${{ inputs.repository }}' $Env:GITHUB_HEAD_REF
