--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -14,6 +14,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Check for Merge Conflict in PR
-      uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@dev
+      uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@issue/OSOE-425
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
