--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -72,7 +72,7 @@ jobs:
           spell-check-this: ${{ inputs.spell-check-this }}
 
       - name: Cancel Workflow on Failure
-        if: failure() && cancel-workflow-on-failure == 'true'
+        if: failure() && inputs.cancel-workflow-on-failure == 'true'
         uses: Lombiq/GitHub-Actions/.github/actions/cancel-workflow@issue/OSOE-433
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
