--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -74,3 +74,5 @@ jobs:
       - name: Cancel Workflow on Failure
         if: failure() && inputs.cancel-workflow-on-failure == 'true'
         uses: Lombiq/GitHub-Actions/.github/actions/cancel-workflow@issue/OSOE-433
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
