--- a/.github/actions/cancel-workflow/action.yml
+++ b/.github/actions/cancel-workflow/action.yml
@@ -7,6 +7,8 @@ runs:
   using: "composite"
   steps:
     - name: Cancel Workflow
+      # Fork PRs won't have a token with write access to Actions, thus won't be able to cancel the workflow.
+      if: github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false
       shell: pwsh
       run: |
         $url = "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel"
