--- a/.github/workflows/deploy-to-azure-app-service.yml
+++ b/.github/workflows/deploy-to-azure-app-service.yml
@@ -9,7 +9,7 @@ on:
         required: true
     inputs:
       cancel-workflow-on-failure:
-        description: When set to "true", will cancel the current workflow run with all jobs if this work workflow fails.
+        description: When set to "true", will cancel the current workflow run with all jobs if this workflow fails.
         required: false
         type: string
         default: "true"
