Removing the rest of test.out-related code

--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -73,9 +73,7 @@ runs:
       if: success() || failure()
       with:
         name: ui-test-failure-dump-${{ steps.setup.outputs.friendly-build-directory-name }}-${{ steps.setup.outputs.runner-suffix }}
-        path: |
-          ${{ inputs.build-directory }}/FailureDumps/
-          test.out
+        path: ${{ inputs.build-directory }}/FailureDumps/
         if-no-files-found: ignore
 
     - name: Test Report
