--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -7,7 +7,7 @@ jobs:
   validate-pull-request:
     runs-on: ubuntu-latest
     steps:
-    - name: Prefix PR
+    - name: Prefix PR with issue key
       uses: Lombiq/GitHub-Actions/.github/actions/prefix-pr@issue/OSOE-425
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
