--- a/.github/actions/prefix-pr/action.yml
+++ b/.github/actions/prefix-pr/action.yml
@@ -14,4 +14,4 @@ runs:
 
     - name: Prefix PR with issue key
       shell: pwsh
-      run: Prefix-PR $Env:GITHUB_REPOSITORY $Env:GITHUB_REF $Env:GITHUB_HEAD_REF ${{ inputs.GITHUB_TOKEN }}
+      run: Prefix-PR $Env:GITHUB_REPOSITORY $Env:GITHUB_REF $Env:GITHUB_HEAD_REF ${{ inputs.GITHUB_TOKEN }} ${{ github.event.pull_request.title }} ${{ github.event.pull_request.body }} ${{ github.event.pull_request.number }}
