--- a/.github/actions/prefix-pr/action.yml
+++ b/.github/actions/prefix-pr/action.yml
@@ -1,4 +1,6 @@
 name: "Prefix PR with issue key"
+description: "Prefixes the PR title with a Jira issue key, and also adding the key to the body if not present"
+
 inputs:
   GITHUB_TOKEN:
     required: true
@@ -13,5 +15,9 @@ runs:
         (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
 
     - name: Prefix PR with issue key
+      # If this is run for a PR opened from a fork (not from a branch in the given repo) then "Resource not accessible
+      # by integration" errors can happen. Thus, not running it for forks during the pull_request event (but it can
+      # run during push, for example). See https://github.com/Lombiq/GitHub-Actions/issues/72 for details.
+      if: github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false
       shell: pwsh
       run: Prefix-PR-with-issue-key $Env:GITHUB_REPOSITORY $Env:GITHUB_REF $Env:GITHUB_HEAD_REF ${{ inputs.GITHUB_TOKEN }} ${{ github.event.pull_request.title }} ${{ github.event.pull_request.body }} ${{ github.event.pull_request.number }}
