--- a/.github/actions/prefix-pr/action.yml
+++ b/.github/actions/prefix-pr/action.yml
@@ -20,4 +20,4 @@ runs:
       # run during push, for example). See https://github.com/Lombiq/GitHub-Actions/issues/72 for details.
       if: github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false
       shell: pwsh
-      run: Prefix-PR-with-issue-key $Env:GITHUB_REPOSITORY $Env:GITHUB_REF $Env:GITHUB_HEAD_REF ${{ inputs.GITHUB_TOKEN }} ${{ github.event.pull_request.title }} ${{ github.event.pull_request.body }} ${{ github.event.pull_request.number }}
+      run: Prefix-PR-with-issue-key $Env:GITHUB_REPOSITORY $Env:GITHUB_REF $Env:GITHUB_HEAD_REF ${{ inputs.GITHUB_TOKEN }} "${{ github.event.pull_request.title }}" "${{ github.event.pull_request.body }}" ${{ github.event.pull_request.number }}
