--- a/.github/actions/cancel-workflow/action.yml
+++ b/.github/actions/cancel-workflow/action.yml
@@ -9,7 +9,7 @@ runs:
     - env:
         GITHUB_CONTEXT: ${{ toJSON(github) }}
       shell: bash
-      run: echo "$GITHUB_CONTEXT""
+      run: echo "$GITHUB_CONTEXT"
 
     - name: Cancel Workflow
       # Fork PRs won't have a token with write access to Actions, thus won't be able to cancel the workflow.
@@ -19,3 +19,4 @@ runs:
         $url = "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel"
         $headers = @{"Authorization" = "Bearer ${{ env.GITHUB_TOKEN }}"; "Accept" = "application/vnd.github+json"}
         Invoke-WebRequest $url -Headers $headers -Method Post
+        exit 1
