--- a/.github/actions/cancel-workflow/action.yml
+++ b/.github/actions/cancel-workflow/action.yml
@@ -4,9 +4,14 @@ description: >
   fails.
 
 runs:
-  # Only JavaScript actions can contain post-scripts.
-  using: "node16"
-  main: "main.js"
-  # Fork PRs won't have a token with write access to Actions, thus won't be able to cancel the workflow.
-  post-if: github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false
-  post: "post.js"
+  using: "composite"
+  steps:
+    - name: Cancel Workflow
+      # Fork PRs won't have a token with write access to Actions, thus won't be able to cancel the workflow.
+      if: github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false
+      shell: pwsh
+      run: |
+        Write-Output "::error::Canceling workflow due to one of the jobs failing."
+        $url = "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel"
+        $headers = @{"Authorization" = "Bearer ${{ env.GITHUB_TOKEN }}"; "Accept" = "application/vnd.github+json"}
+        Invoke-WebRequest $url -Headers $headers -Method Post
