--- a/.github/actions/cancel-workflow/action.yml
+++ b/.github/actions/cancel-workflow/action.yml
@@ -6,10 +6,12 @@ description: >
 runs:
   using: "composite"
   steps:
+    # Only JavaScript actions can contain post-scripts. So either that, or we use this action.
     - name: Cancel Workflow
       # Fork PRs won't have a token with write access to Actions, thus won't be able to cancel the workflow.
       if: github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false
-      shell: pwsh
+      # Post-2.0.1 commit.
+      uses: webiny/action-post-run@c09eade5dd0a57b254f766ff7bc3f5725ab5adb4
       run: |
         Write-Output "::error::Canceling workflow due to one of the jobs failing."
         $url = "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel"
