--- a/.github/actions/cancel-workflow/action.yml
+++ b/.github/actions/cancel-workflow/action.yml
@@ -13,4 +13,9 @@ runs:
       # Post-2.0.1 commit.
       uses: webiny/action-post-run@c09eade5dd0a57b254f766ff7bc3f5725ab5adb4
       with:
-        run: ${{ github.action_path }}/Invoke-WorkflowCancellation.ps1 ${{ github.repository }} ${{ github.run_id }}
+        run: |
+          curl \
+              -X POST \
+              -H "Accept: application/vnd.github+json" \
+              -H "Authorization: Bearer ${{ env.GITHUB_TOKEN }}" \
+              https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel
