--- a/.github/workflows/build-and-test-orchard-core.yml
+++ b/.github/workflows/build-and-test-orchard-core.yml
@@ -109,7 +109,7 @@ jobs:
     # https://github.com/actions/runner/issues/1555.
     strategy:
       matrix:
-        machine-type: [ubuntu-latest, windows-latest]
+        machine-type: [windows-latest]
         timeout-minutes:
         - ${{ inputs.timeout-minutes }}
     timeout-minutes: ${{ matrix.timeout-minutes }}
