--- a/.github/actions/cancel-workflow/action.yml
+++ b/.github/actions/cancel-workflow/action.yml
@@ -1,18 +1,23 @@
 name: Cancel Workflow
 description: >
   Cancels the current workflow run, i.e. all jobs. Useful if you want to cancel the rest of the workflow when one job
-  fails.
+  fails. Note that this will cause the workflow to appear cancelled, not failed.
+
+# Cancelling the workflow in a post-script (like this:
+# https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions#runspost; can also be done with
+# this action: https://github.com/webiny/action-post-run, see Git history of this file) wouldn't help the status, it
+# would still be cancelled. It actually indeed is, but it would be nicer to set it to failed, but there seems to be no
+# way to do this.
 
 runs:
   using: "composite"
   steps:
-    # Only JavaScript actions can contain post-scripts. So either that, or we use this action.
     - name: Cancel Workflow
       # Fork PRs won't have a token with write access to Actions, thus won't be able to cancel the workflow.
       if: github.event.pull_request == '' || github.event.pull_request.head.repo.fork == false
-      # Post-2.0.1 commit.
-      uses: webiny/action-post-run@c09eade5dd0a57b254f766ff7bc3f5725ab5adb4
-      with:
-        # Needs to be one line so it's cross-platform.
-        run: |
-          curl -X POST -H "Accept: application/vnd.github+json" -H "Authorization: Bearer ${{ env.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel
+      shell: pwsh
+      run: |
+        Write-Output "::error::Canceling workflow due to one of the jobs failing."
+        $url = "https://api.github.com/repos/${{ github.repository }}/actions/runs/${{ github.run_id }}/cancel"
+        $headers = @{"Authorization" = "Bearer ${{ env.GITHUB_TOKEN }}"; "Accept" = "application/vnd.github+json"}
+        Invoke-WebRequest $url -Headers $headers -Method Post
